changed hero image

--- a/index.html
+++ b/index.html
@@ -56,27 +56,17 @@
     </nav>
 
     <header>
-      <img id="ingredient-1" src="img/knife.png" alt="chopping board with knife"/>
-      <img id="ingredient-2" src="img/bowl-7.png" alt="thich black sauce in small bowl"/>
-      <img id="ingredient-3" src="img/lemon.png" alt="lemon"/>
-      <img id="ingredient-4" src="img/red-pepper.png" alt="red pepper"/>
-      <img id="ingredient-5" src="img/orange-pepper.png" alt="orange pepper"/>
-      <img id="ingredient-6" src="img/parsley.png" alt="parsley"/>
-      <img id="ingredient-7" src="img/bowl-4.png" alt="bowl of mushrooms"/>
-      <img id="ingredient-8" src="img/garlic.png" alt="garlic"/>
-      <img id="ingredient-9" src="img/bowl-6.png" alt="bowl of chillies"/>
-      <img id="ingredient-10" src="img/bowl-2.png" alt="bowl of fresh leaves"/>
-
-      <div class="text-center">
+      <img id="dish_1" src="img/dish_1.png" alt=""/>
+      <img id="dish_2" src="img/dish_2.png" alt=""/>
+      <img id="dish_3" src="img/dish_3.png" alt=""/>
+      <div id="logo-wrapper" class="text-center">
         <img id="logo" src="img/logo.svg" alt="imperial china logo"/>
         <div class="time">
           <p class="title">OPENING HOURS</p>
           <p>MON - FRI: 8:00am - 11:00pm</p>
           <p>WEEKENDS: 8:00am - 02:00am</p>
         </div>
-
       </div>
-
     </header>
 
     <!-- JS files-->
