added about section and beggining of menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-items">
             <span class="sr-only">Toggle navigation</span> <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand page-scroll" href="#page-top">Imperial China</a>
+          <a class="navbar-brand page-scroll" href="#page-top">
+            <img src="img/logo.svg" alt="" />
+          </a>
         </div>
 
         <!-- nav links -->
@@ -68,6 +70,105 @@
         </div>
       </div>
     </header>
+
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="about-page-left">
+              <h2>About Us</h2>
+              <p>
+                At Imperial China, we are proud to present to you the best in Cantonese Cuisine. Our Style of cuisine is considered to be China's finest regional cooking style, known for its fresh and delicate flavours.
+              </p>
+              <p>
+                We have a saying in China, "... to eat well is to live well, with the quality and variety of what we eat reflecting our good fortune and the very essence of what the best of life is all about..." With this understanding, we set out to use the finest and freshest ingredients and endeavour to preserve the natural flavours and nutrition of our food. We hope you can enjoy the experience of fine Chinese cuisine, in an elegant and sophisticated setting at our restaurant.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="about-page-right">
+              <img src="img/interior-1.jpg" alt="indoor layout of restaurant" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="menu">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-sm-12">
+            <h2>Menu</h2>
+            <h3>Chef's Specials</h3>
+          </div>
+
+          <div class="row special-items">
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <img clas="img-responsive" src="img/special-item_1.jpg" alt="" />
+            </div>
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <div class="item-wrapper">
+                <img clas="img-responsive" src="img/special-item-bg.jpg" alt="" />
+                <div class="text">
+                  <h4>Szechuan Style Chicken</h4>
+                  <p>
+                    With its mixture of cayenne pepper, hot sauce, red chilies, ginger, brown sugar and soy sauce, Szechuan chicken has a savory hot and spicy flavor with a touch of sweetness.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <img clas="img-responsive" src="img/special-item_2.jpg" alt="" />
+            </div>
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <div class="item-wrapper">
+                <img clas="img-responsive" src="img/special-item-bg.jpg" alt="" />
+                <div class="text">
+                  <h4>Stir Fried Chinese Vegetables</h4>
+                  <p>
+                    Full of that distintt chinese flavour; these  vegetables are tasty, crisp and colorful with every mouthful.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <div class="item-wrapper">
+                <img clas="img-responsive" src="img/special-item-bg.jpg" alt="" />
+                <div class="text">
+                  <h4>Chicken With Cashew Nuts</h4>
+                  <p>
+                    Chicken and cashew nuts is a perfect combination of saucy white meat and nutty cashew nuts. Onions, green peppers and carrots all add to the texture and sweetness. Sweet and crunchy this dish goes perfectly with boiled rice.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <img clas="img-responsive" src="img/special-item_3.jpg" alt="" />
+            </div>
+
+            <div class="col-md-3 col-sm-6 pad-0">
+              <div class="item-wrapper">
+                <img clas="img-responsive" src="img/special-item-bg.jpg" alt="" />
+                <div class="text">
+                  <h4>Beef In Black Bean Sauce</h4>
+                  <p>
+                    Black bean sauce dishes are arguably the most famous of our Chinese  menu.  Salty, and with a chilli kick, this dish will deliver when your tastebuds crave the flavours of Asian food.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- JS files-->
     <script src="js/jquery.min.js"></script>
