Adjusted menu specials

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
           <div class="row special-items">
 
             <div class="col-md-3 col-sm-6 pad-0">
-              <img clas="img-responsive" src="img/special-item_1.jpg" alt="" />
+              <div class="img-wrapper">
+                <img clas="img-responsive" src="img/special-item_1.jpg" alt="" />
+              </div>
             </div>
 
             <div class="col-md-3 col-sm-6 pad-0">
@@ -121,7 +123,9 @@
             </div>
 
             <div class="col-md-3 col-sm-6 pad-0">
-              <img clas="img-responsive" src="img/special-item_2.jpg" alt="" />
+              <div class="img-wrapper">
+                <img clas="img-responsive" src="img/special-item_2.jpg" alt="" />
+              </div>
             </div>
 
             <div class="col-md-3 col-sm-6 pad-0">
@@ -149,7 +153,9 @@
             </div>
 
             <div class="col-md-3 col-sm-6 pad-0">
-              <img clas="img-responsive" src="img/special-item_3.jpg" alt="" />
+              <div class="img-wrapper">
+                <img clas="img-responsive" src="img/special-item_3.jpg" alt="" />
+              </div>
             </div>
 
             <div class="col-md-3 col-sm-6 pad-0">
@@ -164,6 +170,11 @@
               </div>
             </div>
 
+            <div class="col-md-3 col-sm-6 pad-0">
+              <div class="img-wrapper">
+                <img clas="img-responsive" src="img/special-item_4.jpg" alt="" />
+              </div>
+            </div>
 
           </div>
         </div>
