Added tabs to menu section

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <div class="col-sm-12">
             <h2>Menu</h2>
             <h3>Chef's Specials</h3>
+           </div>
           </div>
-
           <div class="row special-items">
 
             <div class="col-md-3 col-sm-6 pad-0">
@@ -176,10 +176,140 @@
               </div>
             </div>
 
-          </div>
-        </div>
-      </div>
-    </section>
+          </div> <!-- /.special-items -->
+        </div> <!-- /.container -->
+
+        <div id="full-menu">
+          <div class="container">
+            <div class="row text-center">
+              <div class="col-sm-12">
+                <h2>Full Menu</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-sm-12">
+                <div id="menu-tabs" class="text-center">
+                  <ul class="nav nav-pills">
+                    <li class="active">
+                      <a href="#appetisers" data-toggle="tab">Appetisers</a>
+                    </li>
+                    <li>
+                      <a href="#mains" data-toggle="tab">Mains</a>
+                    </li>
+                    <li>
+                      <a href="#dessert" data-toggle="tab">Dessert</a>
+                    </li>
+                  </ul>
+                </div> <!-- /.menu-tabs -->
+              </div>
+            </div> <!-- /.row -->
+
+            <div class="tab-content">
+
+              <div class="tab-pane active" id="appetisers">
+                <div class="row">
+
+                  <div class="col-sm-6 left-menu-items">
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Bang Bang Chicken</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 5.80</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Bang Bang Chicken</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 5.80</p>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div> <!-- /.left-menu-items -->
+
+                  <div class="col-sm-6 right-menu-items">
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Bang Bang Chicken</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 5.80</p>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div> <!-- /.right-menu-items -->
+
+                </div> <!-- /.row -->
+              </div> <!-- /#appetisers -->
+
+
+              <div class="tab-pane" id="mains">
+                <div class="row">
+              
+                  <div class="col-sm-6 left-menu-items">
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Bang Bang Chicken</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>hello</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 5.80</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Bang Bang Chicken</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 5.80</p>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div> <!-- /.left-menu-items -->
+                </div>
+              </div> <!-- /#mains -->
+
+            </div> <!-- /.tab-content -->
+
+
+          </div> <!-- /.container -->
+        </div> <!-- /#full-menu -->
+      </section>
+
+
+
+
 
     <!-- JS files-->
     <script src="js/jquery.min.js"></script>
