--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Imperial China</title>
+    <title>Project</title>
 
     <!-- CSS files -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -29,7 +29,7 @@
             <span class="sr-only">Toggle navigation</span> <i class="fa fa-bars"></i>
           </button>
           <a class="navbar-brand page-scroll" href="#page-top">
-            <img src="img/logo.svg" alt="" />
+            <img src="img/logo-top.svg" alt="" />
           </a>
         </div>
 
@@ -200,7 +200,7 @@
                       <a href="#dessert" data-toggle="tab">Dessert</a>
                     </li>
                   </ul>
-                </div> <!-- /.menu-tabs -->
+                </div> <!-- /#menu-tabs -->
               </div>
             </div> <!-- /.row -->
 
@@ -227,14 +227,28 @@
 
                     <div class="menu-item">
                       <div class="item-name">
-                        <h4>Bang Bang Chicken</h4>
+                        <h4>Dim Sum Platter</h4>
                       </div>
                       <div class="item-details row">
                         <div class="col-sm-9">
-                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                          <p>A platter of steamed dumplings containing various fillings including vegetables, pork, chicken and shrimp.</p>
                         </div>
                         <div class="col-sm-3">
-                          <p class="item-price">£ 5.80</p>
+                          <p class="item-price">£ 8.50</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Thai Fish Cakes</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>Fried in bread crumbs, combining the fresh flavours of salmon with the zing of Thai spices.</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 5.50</p>
                         </div>
                       </div>
                     </div>
@@ -245,11 +259,39 @@
 
                     <div class="menu-item">
                       <div class="item-name">
-                        <h4>Bang Bang Chicken</h4>
+                        <h4>House Hors D’oeuvres</h4>
                       </div>
                       <div class="item-details row">
                         <div class="col-sm-9">
-                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                          <p>Veg, pancake rolls, chicken satay, spare ribs, prawn toasts and seaweed</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 12.00</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Chilli Spare Ribs</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>Tangy ribs in hoisen sauce and various spices.</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 6.50</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Sesame Prawn Toast</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>Tiger prawns fried with egg, placed on top of brown bread and sprinkled with sesame seeds.</p>
                         </div>
                         <div class="col-sm-3">
                           <p class="item-price">£ 5.80</p>
@@ -265,50 +307,139 @@
 
               <div class="tab-pane" id="mains">
                 <div class="row">
-              
+
                   <div class="col-sm-6 left-menu-items">
 
                     <div class="menu-item">
                       <div class="item-name">
-                        <h4>Bang Bang Chicken</h4>
+                        <h4>Chicken Noodles</h4>
                       </div>
                       <div class="item-details row">
                         <div class="col-sm-9">
-                          <p>hello</p>
+                          <p>Chicken and an abundance of vegetables, tossed with noodles and teriyaki sauce.</p>
                         </div>
                         <div class="col-sm-3">
-                          <p class="item-price">£ 5.80</p>
+                          <p class="item-price">£ 7.50</p>
                         </div>
                       </div>
                     </div>
 
                     <div class="menu-item">
                       <div class="item-name">
-                        <h4>Bang Bang Chicken</h4>
+                        <h4>Egg Fried Rice</h4>
                       </div>
                       <div class="item-details row">
                         <div class="col-sm-9">
-                          <p>dish of cold shredded chicken drizzled with a spicy and nutty sauce</p>
+                          <p>Steamed rice fried with egg.</p>
                         </div>
                         <div class="col-sm-3">
-                          <p class="item-price">£ 5.80</p>
+                          <p class="item-price">£ 2.80</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Thai Green Curry with Lamb</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>Made with coconut milk, fresh green chillies, and lemongrass.</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 10.80</p>
                         </div>
                       </div>
                     </div>
 
                   </div> <!-- /.left-menu-items -->
+
+                  <div class="col-sm-6 right-menu-items">
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Japenese Beef Teriyaki</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>Veg, pancake rolls, chicken satay, spare ribs, prawn toasts and seaweed</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 12.00</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="menu-item">
+                      <div class="item-name">
+                        <h4>Sizzling Prawns</h4>
+                      </div>
+                      <div class="item-details row">
+                        <div class="col-sm-9">
+                          <p>Prawns fried in black pepper sauce with ginger and spring onion.</p>
+                        </div>
+                        <div class="col-sm-3">
+                          <p class="item-price">£ 6.50</p>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div> <!-- /.right-menu-items -->
+
                 </div>
               </div> <!-- /#mains -->
 
-            </div> <!-- /.tab-content -->
 
+            </div> <!-- /.tab-content -->
 
           </div> <!-- /.container -->
         </div> <!-- /#full-menu -->
+
+        <div class="menu-button text-center">
+          <a href="menu.pdf" target="_blank">View All Dishes</a>
+        </div>
+
       </section>
 
+      <section id="gallery">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-sm-12">
+              <h2>Gallery</h2>
+            </div>
+          </div>
+          <div id="gallery-image" class="carousel slide" data-ride="carousel">
 
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+              <div class="item active">
+                <img src="img/gallery_1.jpg" alt="...">
+              </div>
+              <div class="item">
+                <img src="img/gallery_2.jpg" alt="...">
+              </div>
+              <div class="item">
+                <img src="img/gallery_3.jpg" alt="...">
+              </div>
+              <div class="item">
+                <img src="img/gallery_4.jpg" alt="...">
+              </div>
+              <div class="item">
+                <img src="img/gallery_5.jpg" alt="...">
+              </div>
+            </div>
 
+            <!-- Controls -->
+            <a class="left carousel-control" href="#gallery-image" data-slide="prev">
+              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            </a>
+            <a class="right carousel-control" href="#gallery-image" data-slide="next">
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </a>
+
+          </div>
+        </div>
+      </section>
 
 
     <!-- JS files-->
